--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+  box-sizing: border-box;
+
+}
+
+.container {
+display: grid;
+width: 100vw;
+height: 100vh;
+
+}
+
+#menu-links {
+  display: hidden;
+  width: 33vw;
+  height: 33vh;
+}
