still no data. steve code in app.layout

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,8 +1,24 @@
 <h1>Favorites</h1>
-<p>Search local menus, then use sidebar to search stains available.  Save your favorite choices.</p>
-<p>This site is ultimately trying to give user the ability to search Strain names like the great Leafly app and mixin the ability to view daily local dispenaries selections menus. Then save your shopping list in Favorites with a comment.</p>
-<p>Everyone is born with natural Cannabinoid <a href="https://www.ncbi.nlm.nih.gov/m/pubmed/9472392/" target="_blank">Brain</a> receptors.</p>
-
+<header>
+  <p>Search local menus, then use sidebar to search stains available.  Save your favorite choices.</p>
+  <p>This site is ultimately trying to give user the ability to search Strain names like the great Leafly app and mixin the ability to view daily local dispenaries selections menus. Then save your shopping list in Favorites with a comment.</p>
+  <p>Everyone is born with natural Cannabinoid <a href="https://www.ncbi.nlm.nih.gov/m/pubmed/9472392/" target="_blank">Brain</a> receptors.</p>
+</header>
+<script>
+   var div = document.getElementById("data");
+   var data;
+   var sendApi = function(){
+     var myRequest = new Request("https://api.otreeba.com/v1/strains?count=50&sort=name");
+     fetch(myRequest).then(function(response){
+       return response.json();
+     }).then(function(myJson){
+       data = myJson;
+     })
+   };
+   sendApi();
+</script>
+  <%=%>
+<p class="strain"></p>
   <div class="local-menus">
     <p id="menu">See Menu</p>
     <div id="menu-links" >
