--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -6,10 +6,23 @@
 
 }
 
+body {
+
+}
+
+.jumbotron {
+  width: 95vw;
+  height: 95vh;
+  background-image: image-url("weed.jpeg");
+  background-position: center;
+  background-size: cover;
+}
+
 .container {
 display: grid;
 width: 100vw;
 height: 100vh;
+
 
 }
 
