--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,24 @@
         <%end%>
       </nav>
     </header>
-
+    <div class="jumbotron">
+      <!-- <script>
+         var div = document.getElementById("data");
+         var data;
+         var sendApi = function(){
+           var myRequest = new Request("https://api.otreeba.com/v1/strains?count=50&sort=name");
+           fetch(myRequest).then(function(response){
+             return response.json();
+           }).then(function(myJson){
+             data = myJson;
+           })
+         };
+         sendApi();
+      </script> -->
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
-
     <%= yield %>
     <%=link_to 'SIGN OUT', destroy_user_session_path, method: :delete%>
+    </div>
   </body>
 </html>
