--- a/app/views/favorites/new.html.erb
+++ b/app/views/favorites/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Favorites#new</h1>
+
+<h1>Favorites</h1>
 <p>Add Favorite</p>
 <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
 <div class="field">
