--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Favorites</h1>
-<header>
+<header class="jumbotron">
   <p>Search local menus, then use sidebar to search stains available.  Save your favorite choices.</p>
   <p>This site is ultimately trying to give user the ability to search Strain names like the great Leafly app and mixin the ability to view daily local dispenaries selections menus. Then save your shopping list in Favorites with a comment.</p>
   <p>Everyone is born with natural Cannabinoid <a href="https://www.ncbi.nlm.nih.gov/m/pubmed/9472392/" target="_blank">Brain</a> receptors.</p>
+
 </header>
   <div class="row">
-    <div class="new-form", "col-sm-6-right">
+    <div class="new-form sticky-top">
       <h1>Favorites</h1>
       <p>Add Favorite</p>
       <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
@@ -25,19 +26,19 @@
    </div>
 
 
-   <p class="form">ADD</p>
+   <!-- <p class="form">ADD</p>
    <div class="add">
      <script type="text/javascript">
        $('.form').click((event) => {
        $('.new-form').toggle('slow');
          });
      </script>
-   </div>
-    <div class="local-menus", "col-sm-4">
+   </div> -->
+    <div class="local-menus col-4">
      <p id="menu">See Local Menu's</p>
         <p><a href="https://keystoneshops.com/locations/devon/" target="_blank">Devon</a></p><br>
         <p><a href="https://www.terravidahc.com/abington-menu/" target="_blank">Abington</a></p>
     </div>
-    <div class="list", "col-sm-4-left">
-    </div>
+      <div class="list col-sm-4 ">
+      </div>
   </div>
