Using Bootstrap and its like the 70's again!

--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -6,31 +6,31 @@
 
 }
 
-body {
-  background-attachment: fixed;
-  background-image: image-url("weed.jpeg");
-  background-position: center;
-  background-size: cover;
-  margin: 20px;
-}
+// body {
+//   background-attachment: fixed;
+//   background-image: image-url("weed.jpeg");
+//   background-position: center;
+//   background-size: cover;
+//   margin: 20px;
+// }
 
-a {
-  color: orange;
-}
+// a {
+//   color: orange;
+// }
 
 p {
   font-size: 25px;
 }
 
-img {
-  width: 100px;
-  height: 100px;
-}
+// img {
+//   width: 100px;
+//   height: 100px;
+// }
 
-.joint {
-
-  color: blue;
-}
+// .joint {
+//
+//   color: blue;
+// }
 
 
 
