more practice with bootstrap. need a survey, video  & more stores. and get dropdown to work.

--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -34,12 +34,12 @@ p {
 
 
 
-.new-form {
-  display: none;
-  width: 380px;
-  height: 420px;
-  background-color: lightgray;
-  color: midnightblue;
-  // position: fixed;
-
-}
+// .new-form {
+//   display: none;
+//   width: 380px;
+//   height: 420px;
+//   background-color: lightgray;
+//   color: midnightblue;
+//   // position: fixed;
+//
+// }
