--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -1,7 +1,12 @@
 <h1>Favorites show</h1>
 <p>Showing Your Picks</p>
 
-<div class="display">
+<div class="container">
   <p><%=@favorite.strain%></p>
   <p><%=@favorite.comment%></p>
 </div>
+<!-- <span class="navbar-text">Click on ADD for add form</span> -->
+<!-- <form class="form-inline" >
+  <input class-"form-control" type="text" name="" placeholder="search">
+  <button class="btn btn-outline-warning" type="submit" name="button">Buzz</button>
+</form> -->
