--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,13 +1,13 @@
-<h1 class="display-4">Favorites</h1>
+<h1 class="display-4 text-center text-dark">Frida's Freshy Favorites</h1>
 <header class="jumbotron bg-info">
   <p class="text-center text-light">Search local menus, then use sidebar to search stains available.  Save your favorite choices.</p>
   <p class="text-center text-light">This site is ultimately trying to give user the ability to search Strain names like the great Leafly app and mixin the ability to view daily local dispenaries selections menus. Then save your shopping list in Favorites with a comment.</p>
   <p class="text-center">Everyone is born with natural Cannabinoid <a class="text-danger" href="https://www.ncbi.nlm.nih.gov/m/pubmed/9472392/" target="_blank">Brain</a> receptors.</p>
 </header>
-  <div class="container form bg-secondary">
+  <div class="form container bg-secondary w-25 float-right sticky-top">
     <div class="row">
-      <div class="new-form col-4 sticky-top">
-        <h1 class="display-2">Favorites</h1>
+      <div class="new-form col-4 ">
+        <h1 class="display-1">Favorites</h1>
         <p>Add Favorite</p>
         <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
         <div class="form-group">
@@ -27,22 +27,16 @@
       </div>
     </div>
 
-    <div class="container bg-primary d-flex">
-      <div class="row">
-       <section class="local-menus col-8">
-         <span class='text-center text-danger'>See Local Menu's</span>
-          <button class="btn btn-lg btn-warning"><a href="https://keystoneshops.com/locations/devon/" target="_blank">Devon</a></button><br>
-          <button class="btn btn-lg btn-secondary"><a href="https://www.terravidahc.com/abington-menu/" target="_blank">Abington</a></button>
-        </section>
-      </div>
-    </div>
-
-      <div class="list container w-75 rounded bg-info justify-content-center ">
-        <!-- <div  class="row">
-          <div class="col-sm-4 bg-light">
-          </div>
-        </div> -->
-        <div class="card-deck">
+    <div class="list container w-75 rounded bg-info">
+      <div  class="row">
+        <div class="col-6">
 
         </div>
       </div>
+    </div>
+
+    <script type="text/javascript">
+      $('.form').click((event) => {
+      $('.new-form').toggle('slow');
+        });
+    </script>
