--- a/app/views/favorites/new.html.erb
+++ b/app/views/favorites/new.html.erb
@@ -1,5 +1,26 @@
-
-<h1>Favorites</h1>
+<div class="container bg-secondary">
+  <div class="row">
+    <div class="new-form col-4 ">
+      <h1 class="display-1">Favorites</h1>
+      <p>Add Favorite</p>
+      <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
+      <div class="form-group">
+        <%=form.label :strain%>
+        <%=form.text_field :strain%>
+      </div>
+      <div class="form-group">
+        <%=form.label :comment%>
+        <%=form.text_field :comment%>
+      </div>
+      <div class="action">
+        <button class="btn btn-lg btn-primary"><%=form.submit "New Favorite"%></button>
+      </div>
+      <%end%>
+      <button class="btn btn-sm btn-outline-warning"><%= link_to 'Back', favorites_path %></button>
+     </div>
+    </div>
+  </div>
+<!-- <h1>Favorites</h1>
 <p>Add Favorite</p>
 <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
 <div class="field">
@@ -15,4 +36,4 @@
 </div>
 <%end%>
 
-<%= link_to 'Back', favorites_path %>
+<%= link_to 'Back', favorites_path %> -->
