--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -10,11 +10,11 @@
         <h1 class="display-1">Favorites</h1>
         <p>Add Favorite</p>
         <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
-        <div class="form-group">
+        <div class="form-group text-danger">
           <%=form.label :strain%>
           <%=form.text_field :strain%>
         </div>
-        <div class="form-group">
+        <div class="form-group text-danger">
           <%=form.label :comment%>
           <%=form.text_field :comment%>
         </div>
@@ -35,8 +35,8 @@
       </div>
     </div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       $('.form').click((event) => {
       $('.new-form').toggle('slow');
         });
-    </script>
+    </script> -->
