--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="display-4 text-center text-dark">Frida's Freshy Favorites</h1>
+<h1 class="display-3 text-center  mb-5 bg-danger text-warning">Frida's Freshy Favorites</h1>
 <header class="jumbotron bg-info">
   <p class="text-center text-light">Search local menus, then use sidebar to search stains available.  Save your favorite choices.</p>
   <p class="text-center text-light">This site is ultimately trying to give user the ability to search Strain names like the great Leafly app and mixin the ability to view daily local dispenaries selections menus. Then save your shopping list in Favorites with a comment.</p>
